welcome.lessons.welcome.array.search.IndexOfValue.scala.error
indexOfValue:3: error: not found: type j
    if (nums[j] == lookingFor) {return j};
             ^indexOfValue:3: error: value nums of type Array[Int] does not take type parameters.
    if (nums[j] == lookingFor) {return j};
            ^indexOfValue:3: error: not found: value j
    if (nums[j] == lookingFor) {return j};
                                       ^